--- a/docker-proxy/3x-ui/configs/config.json
+++ b/docker-proxy/3x-ui/configs/config.json
@@ -37,13 +37,14 @@
     {
       "listen": "127.0.0.1",
       "port": 62789,
-      "protocol": "tunnel",
+      "protocol": "dokodemo-door",
       "settings": {
         "address": "127.0.0.1"
       },
       "streamSettings": null,
       "tag": "api",
-      "sniffing": null
+      "sniffing": null,
+      "allocate": null
     }
   ],
   "outbounds": [
@@ -89,9 +90,5 @@
   "reverse": null,
   "fakedns": null,
   "observatory": null,
-  "burstObservatory": null,
-  "metrics": {
-    "tag": "metrics_out",
-    "listen": "127.0.0.1:11111"
-  }
+  "burstObservatory": null
 }
