--- a/docker-proxy/caddy/config/Caddyfile
+++ b/docker-proxy/caddy/config/Caddyfile
@@ -28,43 +28,17 @@ import *.caddy
 	}
 }
 
-:{$PORT_LOCAL_SUB2SING} {
+:{$PORT_TEST} {
 	encode gzip zstd
 
 	route {
-
 		crowdsec
 		appsec
 
 		root * /srv/subs
-
-		@subjson-html {
-			path {$URI_JSON_PATH}*
-			header Accept *text/html*
-		}
-
-		handle @subjson-html {
-			rewrite * /index_sub.html
-			templates
-			file_server
-		}
-
-		@subjson-api {
-			path {$URI_JSON_PATH}*
-			not header Accept *text/html*
-		}
-
-		handle @subjson-api {
-			uri strip_prefix {$URI_JSON_PATH}
-			reverse_proxy http://sub2sing:8080
-		}
-		
-		handle {
-			try_files {path} /test-backend.html
-			templates
-			file_server
-		}
-		
+		# SPA-фоллбек: если файла нет — отдать /index.html с 200
+		try_files {path} /index.html
+		templates
+		file_server
 	}
-
 }
