--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -1,10 +1,14 @@
 {
   "listen": {
-    "port": 9118,
     "scheme": "https",
     "localhost": "127.0.0.1"
   },
-  "corsehost": "http://cors.apn.monster",
+  "LampaWeb": {
+    "initPlugins": {
+      "dlna": false,
+      "torrserver": false
+    }
+  },
   "firefox": {
     "enable": true
   },
@@ -29,7 +33,6 @@
       "cache_time": 60,
       "useproxy": false,
       "useproxystream": false,
-      "globalnameproxy": "tor-proxy",
       "proxy": null
     },
     "forced_apn": false,
@@ -38,11 +41,6 @@
       "rent": 81920,
       "length": 390
     },
-    // "cache_hls": [
-    //   {
-    //     "enable": true
-    //   }
-    // ],
     "maxlength_m3u": 5000000,
     "maxlength_ts": 40000000,
     "useproxy": false,
@@ -69,14 +67,11 @@
       "actions_attempts": 6
     }
   ],
-  "accsdb": {
-    "enable": false
-  },
-  "LampaWeb": {
-    "initPlugins": {
-      "dlna": false,
-      "torrserver": false
-    }
+  "tmdb": {
+    "DNS": null,
+    "API_IP": "",
+    "IMG_IP": "",
+    "useproxy": true
   },
   "cub": {
     "enable": true,
@@ -85,10 +80,14 @@
     "mirror": "cub.rip",
     "useproxy": true
   },
-  "tmdb": {
-    "DNS": null,
-    "API_IP": "", // 108.157.4.61
-    "IMG_IP": "", // 138.199.37.225 or 138.199.36.9
-    "useproxy": true
-  }
+  "Zetflix": {
+    "useproxy": true,
+    "useproxystream": true
+  },
+  "accsdb": {
+    "enable": true
+  },
+  "multiaccess": true,
+  "playerInner": "C:\\Program Files\\VideoLAN\\VLC\\vlc.exe",
+  "corsehost": "http://cors.apn.monster"
 }
