--- a/docker-proxy/traefik/dynamic/crowdsec.yml
+++ b/docker-proxy/traefik/dynamic/crowdsec.yml
@@ -1,26 +1,35 @@
-# templates/crowdsec-bouncer.yml
+# templates/crowdsec-bouncer.yml (оптимизированная версия)
 
 http:
   middlewares:
+    # Оптимизированный CrowdSec bouncer
     crowdsec-bouncer:
       plugin:
         bouncer:
           enabled: true
           mode: live
           logLevel: INFO
-          updateIntervalSeconds: 15
-          updateMaxFailure: 0
-          defaultDecisionSeconds: 15
-          httpTimeoutSeconds: 10
+          updateIntervalSeconds: 10          # Уменьшено с 15 до 10 секунд
+          updateMaxFailure: 3                 # Увеличено с 0 до 3 для устойчивости
+          defaultDecisionSeconds: 10          # Уменьшено с 15 до 10 секунд
+          httpTimeoutSeconds: 5               # Уменьшено с 10 до 5 секунд
           crowdsecMode: stream
           crowdsecAppsecEnabled: true
           crowdsecAppsecFailureBlock: true
-          crowdsecAppsecUnreachableBlock: true
+          crowdsecAppsecUnreachableBlock: false # Изменено на false для устойчивости
           crowdsecAppsecHost: crowdsec:7422
           crowdsecLapiKey: ${CROWDSEC_API_KEY_TRAEFIK}
           crowdsecLapiHost: crowdsec:8080
           crowdsecLapiScheme: http
           forwardedHeadersTrustedIPs:
             - 172.16.0.0/12
+            - 172.18.0.0/16
+            - 172.20.0.0/16
           clientTrustedIPs:
             - 172.16.0.0/12
+            - 172.18.0.0/16
+            - 172.20.0.0/16
+          # Дополнительные настройки для оптимизации
+          crowdsecLapiTimeout: 5s
+          crowdsecLapiRetryInterval: 1s
+          crowdsecLapiMaxRetries: 3
