Добавлены параметры для использования tmpfs для Lampac_cache

--- a/docker-proxy/lampac/compose.yaml
+++ b/docker-proxy/lampac/compose.yaml
@@ -60,3 +60,7 @@ networks:
 volumes:
   Lampac_cache:
     driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: size=5g
