Исправлены пути в конфигурации для subPath, subJsonPath, subURI и subJsonURI

--- a/docker-proxy/3x-ui/3x-ui.env
+++ b/docker-proxy/3x-ui/3x-ui.env
@@ -36,8 +36,8 @@ subEnable="true"
 subTitle="${WEBDOMAIN}"
 subListen="0.0.0.0"
 subPort="${PORT_LOCAL_VLESS_SUBSCRIBE}"
-subPath="${URI_SUB_PATH}"
-subJsonPath="${URI_JSON_PATH}"
+subPath="/${URI_SUB_PATH}/"
+subJsonPath="/${URI_JSON_PATH}/"
 subDomain="${WEBDOMAIN}"
 externalTrafficInformEnable="false"
 externalTrafficInformURI=
@@ -46,8 +46,8 @@ subKeyFile=
 subUpdates=1
 subEncrypt="true"
 subShowInfo="true"
-subURI="https://${WEBDOMAIN}/${URI_SUB_PATH}/"
-subJsonURI="https://${WEBDOMAIN}/${URI_JSON_PATH}/"
+subURI="https://${WEBDOMAIN}${URI_SUB_PATH}"
+subJsonURI="https://${WEBDOMAIN}${URI_JSON_PATH}"
 subJsonEnable="true"
 subJsonFragment=
 subJsonNoises=
