Нормализованы значения подписки (subPath, subJsonPath, subURI, subJsonURI) и добавлено логирование параметров обновления панели

--- a/docker-proxy/3x-ui/3x-ui.env
+++ b/docker-proxy/3x-ui/3x-ui.env
@@ -36,8 +36,8 @@ subEnable="true"
 subTitle="${WEBDOMAIN}"
 subListen="0.0.0.0"
 subPort="${PORT_LOCAL_VLESS_SUBSCRIBE}"
-subPath="/${URI_SUB_PATH}/"
-subJsonPath="/${URI_JSON_PATH}/"
+subPath="${URI_SUB_PATH}"
+subJsonPath="${URI_JSON_PATH}"
 subDomain="${WEBDOMAIN}"
 externalTrafficInformEnable="false"
 externalTrafficInformURI=
