--- a/docker-proxy/compose.d/00-base.yml
+++ b/docker-proxy/compose.d/00-base.yml
@@ -1,3 +1,7 @@
+# Ranges in use:
+# traefik-proxy: 172.18.0.0/24 (external network created separately)
+# dns-net:       172.19.0.0/24 (internal network for DNS services)
+
 networks:
   traefik-proxy:
     external: true
@@ -5,7 +9,7 @@ networks:
     internal: true
     ipam:
       config:
-        - subnet: 172.31.0.0/24
+        - subnet: "172.19.0.0/24"
 
 volumes:
   crowdsec_data:
@@ -20,5 +24,3 @@ volumes:
       type: tmpfs
       device: tmpfs
       o: size=5g
-
-# 172.16.0.0/12 172.18.0.0/16 172.20.0.0/16
