--- a/docker-proxy/compose.d/03-crowdsec.yml
+++ b/docker-proxy/compose.d/03-crowdsec.yml
@@ -4,10 +4,12 @@ services:
     container_name: crowdsec
     restart: unless-stopped
     networks:
-      - traefik-proxy
-      - dns-net
+      traefik-proxy:
+        ipv4_address: 172.18.0.3
+      dns-net:
+        ipv4_address: 172.19.0.3
     # dns:
-    #   - 172.31.0.53
+    #   - 172.19.0.10
     ports:
       - "127.0.0.1:8080:8080"
       - "127.0.0.1:7422:7422"
