--- a/docker-proxy/compose.d/06-traefik.yml
+++ b/docker-proxy/compose.d/06-traefik.yml
@@ -30,10 +30,12 @@ services:
     #   - |
     #     exec /entrypoint.sh "$@"
     networks:
-      - traefik-proxy
-      - dns-net
+      traefik-proxy:
+        ipv4_address: 172.18.0.6
+      dns-net:
+        ipv4_address: 172.19.0.6
     # dns:
-    #   - 172.31.0.53
+    #   - 172.19.0.10
     healthcheck:
       test: ["CMD-SHELL", "pgrep -x traefik >/dev/null && nc -z 127.0.0.1 80 && nc -z 127.0.0.1 4443"]
       interval: 30s
@@ -137,8 +139,8 @@ services:
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiKey=${CROWDSEC_API_KEY_TRAEFIK}
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiHost=crowdsec:8080
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiScheme=http
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.forwardedHeadersTrustedIPs=172.16.0.0/12,172.18.0.0/16,172.20.0.0/16
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.clientTrustedIPs=172.16.0.0/12,172.18.0.0/16,172.20.0.0/16
+      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.forwardedHeadersTrustedIPs=172.18.0.0/24,172.19.0.0/24
+      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.clientTrustedIPs=172.18.0.0/24,172.19.0.0/24
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiTimeout=5s
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiRetryInterval=1s
       - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiMaxRetries=3
