--- a/docker-proxy/compose.d/12-3x-ui.yml
+++ b/docker-proxy/compose.d/12-3x-ui.yml
@@ -18,9 +18,11 @@ services:
       - no-new-privileges=true
     networks:
       traefik-proxy:
+        ipv4_address: 172.18.0.12
       dns-net:
+        ipv4_address: 172.19.0.12
     dns:
-      - 172.31.0.53
+      - 172.19.0.10
     volumes:
       - /opt/docker-proxy/3x-ui/scripts/00_BeforeStart:/mnt/sh/beforestart
       - /opt/docker-proxy/3x-ui/scripts/01_AfterStart:/mnt/sh/afterstart
